# phantom-tutor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHANTOM-SATELLITES-OPEN-SOURCE-FINAL-SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  index.md  pyproject.toml
.github/workflows/: ci.yml
content/: __init__.py  scenarios.md
content/coding/: __init__.py  seed.json
content/design/: __init__.py  seed.json
content/knowledge/: __init__.py  seed.json
docs/: 2026-06-18-phantom-tutor-design.md  2026-06-18-phantom-tutor-phase1-plan.md  FINAL_RELEASE_AUDIT.md  INDEX.md  LEARNING_PLAN_BUNDLE.md  OPEN_SOURCE_READINESS.md  PRACTICE_SCENARIO_BUNDLE.md  PUBLIC_RELEASE_APPROVAL.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SYNTHETIC_CAREER_LOOP.md  TAG_PLAN.md  phantom-tutor.md
docs/_archive/: 2026-06-18-phantom-tutor-design.md  2026-06-18-phantom-tutor-phase1-plan.md  END-TO-END-FLOW.md  INDEX.md  MONETIZATION-ANALYSIS.md  OSS-LANDSCAPE-AND-DIRECTION.md  ROADMAP.md  ROADMAP.zh-TW.md
docs/superpowers/plans/: 2026-06-21-jobs-layer-wealth-score.md
docs/superpowers/specs/: 2026-06-21-fsrs-adoption.md  2026-06-21-import-104-source.md  2026-06-21-jobs-layer-wealth-score-design.md
phantom_tutor/: cli.py  content.py  demo_loop.py  jobs.py  learning_plan.py  llm.py  memory.py  paths.py  practice_scenario.py  runner.py  sources_104.py  srs.py  wealth.py
phantom_tutor/modes/: coding.py  design.py  interview.py  knowledge.py
scripts/: assemble_playbook.py
tests/: conftest.py  test_cli_import_104_e2e.py  test_cli_jobs_e2e.py  test_cli_module_entrypoint.py  test_cli_today_e2e.py  test_content.py  test_content_banks.py  test_demo_loop_contract.py  test_jobs.py  test_learning_plan_contract.py  test_llm.py  test_memory.py  test_mode_coding_e2e.py  test_mode_design_e2e.py  test_mode_interview_e2e.py  test_mode_interview_multiturn_e2e.py  test_mode_knowledge_e2e.py  test_mode_knowledge_llm_e2e.py  test_open_source_contract.py  test_packaging.py  test_paths.py  test_practice_scenario_contract.py  test_release_prep_contract.py  test_runner.py  test_sources_104.py  test_srs.py  test_wealth.py
