[project]
name = "phantom-tutor"
version = "0.1.0a0"
description = "Personal study assistant on phantom-mesh core"
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "markl-a" }]
keywords = ["ai-agents", "career-learning", "interview-prep", "srs", "tutor"]
dependencies = ["fsrs>=6.3.1,<7"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
tutor = "phantom_tutor.cli:main"

[project.urls]
Homepage = "https://github.com/markl-a/phantom-tutor"
Documentation = "https://github.com/markl-a/phantom-tutor#readme"
Repository = "https://github.com/markl-a/phantom-tutor"
Issues = "https://github.com/markl-a/phantom-tutor/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["phantom_tutor*", "content*"]

[tool.setuptools.package-data]
content = ["scenarios.md"]
"content.knowledge" = ["*.json"]
"content.coding" = ["*.json"]
"content.design" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
